--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="leader.png" />
-
   <!-- <link rel="apple-touch-icon" href="../src/component/img/Path.png" /> -->
 
   <!--
@@ -18,10 +17,15 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+  <!-- <script src="https://docs.dhtmlx.com/gantt/codebase/dhtmlxgantt.js?v=20180322"></script>
+  <link rel="stylesheet" href=" https://docs.dhtmlx.com/gantt/codebase/dhtmlxgantt.css?v=20180322"> -->
+ 
+  <script src="dhtmlxgantt.js"></script>
+  <link rel="stylesheet" href="dhtmlxgantt.css" type="text/css">
+
   <!-- <link rel="stylesheet" href="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.css" type="text/css">
   <script src="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.js"></script> -->
-  <script type="text/javascript" src="codebase/dhtmlxgantt.js"></script>
-  <link rel="stylesheet" href="codebase/dhtmlxgantt.css">
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
