--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="leader.png" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/leader.png" /> -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
