--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="leader.png" />
+  <!-- <link rel="icon" href="leader.png" /> -->
+  <link rel="icon" href="https://files.leader.codes/favicon.ico" type="image/x-icon">
+
   <!-- <link rel="icon" href="%PUBLIC_URL%/leader.png" /> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
