--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
 
   <script src="dhtmlxgantt.js"></script>
   <link rel="stylesheet" href="dhtmlxgantt.css" type="text/css">
-
+  <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
   <!-- <link rel="stylesheet" href="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.css" type="text/css">
   <script src="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.js"></script> -->
 
